--- a/microbiology.html
+++ b/microbiology.html
@@ -121,7 +121,17 @@ The physician recommends a 5-day course of azithromycin, and the patient takes i
   <label for="other"> D. The purpose of the antibiotic was not to treat the symptoms of the disease but to reduce transmission of the organism</label><br> <input type="radio" id="E" name="1" value="E">
   <label for="other"> E. The standard dose of azithromycin was too low for this patient’s disease, and the dose will need to be doubled</label><br>
 </form> 
-Answer: <p style="color:white"> </p> 
+Answer: <p style="color:white"> The purpose of the antibiotic was not to treat the symptoms of the disease but to reduce transmission of the organism (D)<br>
+
+Treatment of pertussis is generally supportive, particularly in very young children. Cough suppressants have little impact. Antibiotics generally have no impact on the duration of symptoms, though they may shorten the course and decrease the severity if given early in the catarrhal phase. Since pertussis is rarely diagnosed during the catarrhal phase, the addition of antibiotics is to eradicate the B. pertussis from the nasopharynx to reduce the spread of the infection (particularly in this case as this patient lives with a child at home and works in a populated environment). The antibiotic of choice is azithromycin (due to dosing schedule, bioavailability, and low side effect profile). Alternative antibiotics include clarithromycin, erythromycin, and for patients older than 2 months intolerant of macrolides, trimethoprim–sulfamethoxazole (TMP–SMX) is a reasonable alternative. TMP–SMX should be avoided in children younger than 2 months due to risk for kernicterus. Azithromycin and erythromycin are both associated with an increased risk of infantile hypertrophic pyloric stenosis, and it is unclear if such a risk exists for clarithromycin. Neither azithromycin nor clarithromycin is approved by the Food and Drug Administration (FDA) for use in children younger than 6 months. Macrolide resistance is very uncommon, and antibiotic testing is generally not performed.<br>
+
+A Azithromycin is not expected to clear this infection, but it was given because patients expect an antibiotic. This is incorrect because it is never correct to give an antibiotic just because a patient wants it.<br>
+
+B Coinfection with a second organism is common in this disease, and it is likely that administration of a second antibiotic is warranted. This is incorrect because coinfection with a second organism is not common in this disease.<br>
+
+C It is likely that the infection was resistant to azithromycin, and therapy will need to be altered. This is incorrect because azithromycin resistance is not commonly described in pertussis.<br>
+
+E The standard dose of azithromycin was too low for this patient’s disease and the dose will need to be doubled. This is incorrect because a standard dose is all that is needed<Br>.</p> 
 <i>Processes, replication, and genetics (eg, metabolism, growth, and regulation)</i><br>
   <i>Oncogenesis</i><br>
 <i>Antibacterial agents (eg, mechanisms of action on organism, toxicity to humans, and mechanisms of resistance)</i><br>
