--- a/pharmacology.html
+++ b/pharmacology.html
@@ -212,6 +212,23 @@ A 26-year-old man became inebriated after drinking several glasses of alcoholic 
 </form> 
 Answer: <p style="color:white"> A Being a polar drug, ethanol is readily water soluble. Because its molecular weight is small, it can cross cell membranes by aqueous diffusion through aquaporins.
 B–E See correct answer explanation.<br></p>
+Aminocaproic acid is an antifibrinolytic drug often used to treat excessive postoperative bleeding. What is the net charge of aminocaproic acid in the serum?<br>
+<img src="pharmacology2.jpg"><br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. +2</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B.+1 </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. 0</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. -1</label><br> 
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. -2</label><br> 
+</form> 
+Answer: <p style="color:white"> C. 0.
+
+The net charge on aminocaproic at serum pH will be zero. Recall that when the solution pH is below the p Ka value of an ionizable group, the group will be predominantly protonated in solution. Conversely, when the solution pH is above the p Ka value of an ionizable group, the group will be predominantly deprotonated in solution. Normal serum pH is 7.4. The p Ka value of the carboxyl group on aminocaproic acid will be between 2 and 4 (typical values for carboxyl groups). This p Ka value is below the serum pH, so the group will exist predominantly in its deprotonated form, which for a carboxyl group is the negatively charged (–1) carboxylate ion. The p Ka value of the amino group on aminocaproic acid will be close to 9 (a typical value for an amino group). This p Ka value is higher than serum pH, so the group will exist predominantly in its protonated form, which for an amino group is the positively charged (+1) ammonium ion. Thus, at pH 7.4, the carboxyl group of aminocaproic acid will be negatively charged, and the amino group will be positively charged. This results in a net charge of zero.</p>
 A 67-year-old woman recently diagnosed with atrial fibrillation started treatment with atenolol, 100 mg/d. With this dose, the percentage of atenolol bound to plasma proteins is about 5%. Which of the following would have been the bound percentage of atenolol if a dose of 50 mg/d had been administered to the same patient?<br>
 <form>
   <input type="radio" id="A" name="1" value="A">
