--- a/pharmacology.html
+++ b/pharmacology.html
@@ -226,9 +226,42 @@ Aminocaproic acid is an antifibrinolytic drug often used to treat excessive post
   <input type="radio" id="E" name="1" value="E">
   <label for="other"> E. -2</label><br> 
 </form> 
-Answer: <p style="color:white"> C. 0.
-
-The net charge on aminocaproic at serum pH will be zero. Recall that when the solution pH is below the p Ka value of an ionizable group, the group will be predominantly protonated in solution. Conversely, when the solution pH is above the p Ka value of an ionizable group, the group will be predominantly deprotonated in solution. Normal serum pH is 7.4. The p Ka value of the carboxyl group on aminocaproic acid will be between 2 and 4 (typical values for carboxyl groups). This p Ka value is below the serum pH, so the group will exist predominantly in its deprotonated form, which for a carboxyl group is the negatively charged (–1) carboxylate ion. The p Ka value of the amino group on aminocaproic acid will be close to 9 (a typical value for an amino group). This p Ka value is higher than serum pH, so the group will exist predominantly in its protonated form, which for an amino group is the positively charged (+1) ammonium ion. Thus, at pH 7.4, the carboxyl group of aminocaproic acid will be negatively charged, and the amino group will be positively charged. This results in a net charge of zero.</p>
+Answer: <p style="color:white"> C. 0
+The net charge on aminocaproic at serum pH will be zero. Recall that when the solution pH is below the p Ka value of an ionizable group, the group will be predominantly protonated in solution. Conversely, when the solution pH is above the p Ka value of an ionizable group, the group will be predominantly deprotonated in solution. Normal serum pH is 7.4. The p Ka value of the carboxyl group on aminocaproic acid will be between 2 and 4 (typical values for carboxyl groups). This p Ka value is below the serum pH, so the group will exist predominantly in its deprotonated form, which for a carboxyl group is the negatively charged (–1) carboxylate ion. The p Ka value of the amino group on aminocaproic acid will be close to 9 (a typical value for an amino group). This p Ka value is higher than serum pH, so the group will exist predominantly in its protonated form, which for an amino group is the positively charged (+1) ammonium ion. Thus, at pH 7.4, the carboxyl group of aminocaproic acid will be negatively charged, and the amino group will be positively charged. This results in a net charge of zero.<br></p>
+The structure of naproxen, a nonsteroidal anti-inflammatory drug, is shown in the figure below. Naproxen has a p Ka value of 5.2, and its solubility is very sensitive to pH. What would be the approximate ratio of the ionized to unionized forms of the drug at serum pH?<br>
+<img src="naproxen.jpg"><br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. 1:100</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. 1:10</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. 1:1</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. 10:1</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. 100:1</label><br> 
+</form> 
+Answer: <p style="color:white"> Correct: E. 100:1. The ratio of ionized to unionized naproxen is approximately 100:1 at serum pH. This problem is solved using the Henderson–Hasselbalch equation,which allows us to determine the proportion of protonated and deprotonated forms of a molecule at any pH when we know the pK<sub>a</sub> value of the molecule’s ionizable group. In this case, the pH of our solution is 7.4, normal serum pH. However, because we are only doing an estimation for this problem, we can use a pH value of 7.2 in order to make our calculation easier. The pK<sub>a</sub> of the carboxyl group on naproxen is 5.2. Substituting in 7.2 for pH, and 5.2 for pK<sub>a</sub>.So, the ratio of A–: HA is 100:1. In the case of naproxen, the conjugate base (A–) is the deprotonated or ionized form of the molecule, and the acid (HA) is the unionized form (i.e., the structure shown in the figure with Question 4), so the ratio of ionized to unionized naproxen is 100:1<br>
+</p>
+While doing some yardwork at home, a teenage boy fell into some underbrush. Recognizing that there were poison ivy vines in the brush, the boy rushed indoors, removed his clothing, and washed thoroughly. The chemical irritant in poison ivy is urushiol, a mixture of catechols substituted with long-chain alkyl groups, like the one shown in the figure below. Which of the following household products should the boy use when washing his skin?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Vinegar</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Ammonia</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Soapy water</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Water</label><br> 
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Sugar water</label><br> 
+</form> 
+Answer: <p style="color:white"> C. Soapy water.<br>
+The boy would be best served by washing with soapy water. The goal here is to facilitate the removal of urushiol from the skin. The long hydrocarbon chain on urushiol makes it very hydrophobic or “greasy.” Soap, which is amphipathic, is able to interact with the hydrophobic urushiol and facilitates the suspension of urushiol. Furthermore, soapy water is basic, with a normal pH of about 9 to 10. The p Ka value of the central hydroxyl group on urushiol is close to 8. Because the pH of soapy water is higher than the p Ka value of this hydroxyl group, the group will be deprotonated and thus, negatively charged. This will additionally increase the solubility of urushiol.<br>
+A is incorrect. Vinegar is 5 to 20% acetic acid and will have a pH value close to 3. Because this pH is below the p Ka of the ionizable hydroxyl group on urushiol, the group will remain protonated, thus decreasing the solubility of urushiol and decreasing the effectiveness of the wash solution to remove the hydrophobic molecule.<br>
+B is incorrect. The pH of household ammonia is well above the p Ka value of the ionizable hydroxyl group on urushiol, so the group would be deprotonated and thus, slightly more soluble in solution than the protonated form. However, the increase in solubility gained by deprotonating the hydroxyl group will not be significant enough to facilitate removal of urushiol from the skin; the hydrophobic carbon chain provides too much non-polar surface area to be suspended in water.<br>
+D is incorrect. Plain water will not dissolve the hydrophobic urushiol.<br>
+E is incorrect. Adding sugar to water will have no effect on the ability of water to dissolve urushiol.<br></p>
 A 67-year-old woman recently diagnosed with atrial fibrillation started treatment with atenolol, 100 mg/d. With this dose, the percentage of atenolol bound to plasma proteins is about 5%. Which of the following would have been the bound percentage of atenolol if a dose of 50 mg/d had been administered to the same patient?<br>
 <form>
   <input type="radio" id="A" name="1" value="A">
