--- a/endocrine.html
+++ b/endocrine.html
@@ -44,6 +44,63 @@ ketoacidosis, including cerebral edema, associated electrolyte abnormalities; di
 mellitus, chronic complications: gastrointestinal/gastroparesis, neurologic/neuropathy,
 ophthalmologic/retinopathy, peripheral vascular, renal/nephropathy, metabolic
   syndrome</i><br>
+  A 20-year-old female visits an urgent care clinic complaining of recent weight loss, fatigue, thirst, and increased urinary frequency. Physical examination reveals shallow, rapid breathing and a faint ketotic odor. The physician assistant on duty suspects new-onset type I diabetes and orders a basic metabolic panel, arterial blood gases (ABGs), and urinalysis. Which of the following blood values is most compatible with this patient’s probable illness?<br>
+  <table>
+  <tr>
+  <th> </th>
+    <th>pH</th>
+    <th>Bicarbonate (mEq/L)</th>
+    <th>Arterial pCO<sub>2</sub> (mmHg)
+  </tr>
+  <tr>
+    <td>A</td>
+    <td>7.27</td>
+    <td>13</td>
+    <td>30</td>
+  </tr>
+  <tr>
+   <td>B</td>
+    <td>7.27</td>
+    <td>27</td>
+    <td>60</td>
+  </tr>
+  <tr>
+  <td>C</td>
+    <td>7.40</td>
+    <td>24</td>
+    <td>40</td>
+    </tr>
+    <tr>
+    <td>D</td>
+    <td>7.52</td>
+    <td>24</td>
+    <td>30</td>
+    </tr>
+    <tr>
+    <td>E</td>
+    <td>7.52</td>
+    <td>35</td>
+    <td>45</td>
+    </tr>
+</table>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. </label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. </label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. </label><br> 
+</form> 
+Answer: <p style="color:white"> A. pH = 7.27; Bicarbonate = 13; Arterial pCO2 = 30.<br>
+Diabetic ketoacidosis is a metabolic acidosis; it will cause a decrease in serum pH below the normal value of 7.4, with a decrease in serum bicarbonate below the normal value of 24 mEq/L. The figure in the next column shows a mathematical simplification of the Henderson–Hasselbalch for the serum bicarbonate buffering system that is helpful to use while thinking about metabolic and respiratory disturbances in serum acid–base balance.<br>
+In the case described here, we know that the serum pH will be lower than 7.4, because we’re told that the patient has a metabolic acidosis. As we see in the simplified expression of the Henderson–Hasselbalch equation, there are two ways to decrease serum pH; either the serum bicarbonate level decreases, or the CO2 level increases. (Normal serum bicarbonate concentration is 24 mEq/L, and a normal serum pCO2 is 40 mm Hg.) A decrease in bicarbonate occurs under conditions of metabolic acidosis, and an increase in CO2 pressure occurs under conditions of respiratory acidosis. This patient’s serum pCO2 is lower than normal because she is hyperventilating to “blow off” acid (H2CO3) from her serum.<br>
+B is incorrect. This combination of bicarbonate concentration (close to normal) and CO2 pressure (higher than normal) is consistent with a respiratory acidosis.<br>
+C is incorrect. This combination of parameters represents normal conditions.<br>
+D is incorrect. This combination of parameters represents a respiratory alkalosis.<br>
+E is incorrect. This combination of parameters represents a metabolic alkalosis.<br></p>
 <i>hypoglycemia and islet cell disorders: hypoglycemia (secondary to insulinoma,
 surreptitious insulin use, sepsis, liver failure); hyperglycemia (secondary to
   glucagonoma); hyperinsulinism; islet cell</i><br>
