--- a/endocrine.html
+++ b/endocrine.html
@@ -37,7 +37,7 @@
   <b>Repair, regeneration, and changes associated with stage of life</b><br>
 <h2>Abnormal Processes: Health and Health Maintenance, Screening, Diagnosis,
   Management, Risks, Prognosis</h2></br>
-  <b>Diabetes mellitus and other disorders of the endocrine pancreas</i><br>
+  <b>Diabetes mellitus and other disorders of the endocrine pancreas</b><br>
 <i>diabetes mellitus: diabetes mellitus, type 1; diabetes mellitus, type 1.5; diabetes mellitus,
 type 2; diabetes mellitus, acute complications: hyperosmolar coma, hypoglycemic shock,
 ketoacidosis, including cerebral edema, associated electrolyte abnormalities; diabetes
