--- a/microbiology.html
+++ b/microbiology.html
@@ -139,7 +139,67 @@ E The standard dose of azithromycin was too low for this patient’s disease and
   <i>Structure (eg, physical and chemical properties, virulence factors)</i><br>
   <i>Diseases:  infectious mononucleosis (Epstein-Barr virus); cytomegalovirus infection; yellow
     fever; human herpesvirus 8 (HHV-8)</i><br>
-  A mother brings her 6-year-old daughter to her pediatrician with symptoms of a sore throat and red, tearing eyes. The patient complains of itchy eyes when she woke up that morning. Her symptoms started the previous day, and she missed school today. History reveals that the child’s vaccinations are up to date and that she has been previously healthy with no prior hospitalizations. Upon examination, the patient is found to have a temperature of 39°C, blood pressure of 90/70 mmHg, and respiratory rate of 20 breaths/min. She has upper lid edema with slight subconjunctival hemorrhage. Her mother mentions that other classmates were also out sick during the past week with similar symptoms.<br>
+  A 40-year-old woman experiences a sudden onset of dry mouth, muscle weakness, double vision, difficulty in swallowing, and difficulty in speaking. History revealed that she had eaten some home-canned green beans the night before. Samples of the beans and the patient's serum are sent to the laboratory for toxin testing. The physician suspects botulism and gives the patient an injection of trivalent antitoxin.
+What is the method of action of the toxin?
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Zinc-dependent metalloprotease cleaves synaptobrevin II, inhibiting the docking of inhibitory neurotransmitter vesicles, causing continuous firing and spasm.</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Zinc-dependent metalloproteases cleave SNAREs, preventing neurons from releasing acetylcholine, causing flaccid paralysis.</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Phospholipase C cleaves phospholipids, causing extensive membrane damage leading to systemic spread of the toxin.</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Enzymes digest connective tisues, leading to structural damage and systemic spread of the toxin.</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Glucosyltransferases inhibit the Rho family of GTPases, causing fluid secretion, cell death, and inflammation leading to pseudomembrane formation.</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+  Answer: <p style="color:white"> <i>Clostridium botulinum</i> can produce any of at least seven types of botulinum neurotoxin, most commonly A, B, and E, which act as zinc-dependent metalloproteases that cleave the SNARE proteins VAMP, syntaxin, and SNAP-25 preventing acetylcholine release at neuromuscular synapses, resulting in flaccid paralysis.</p><Br>
+A 36-year-old carpenter is seen in the emergency room with complaints of jaw and neck stiffness. History reveals that he stepped on a nail the previous week and received a deep puncture wound. He does not remember having any vaccinations in the last 30 years. He is given shots of tetanus antitoxin and tetanus toxoid and begun on a course of penicillin. The wound is surgically debrided.
+  What is the method of action of the toxin?
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Zinc-dependent metalloprotease cleaves synaptobrevin II, inhibiting the docking of inhibitory neurotransmitter vesicles, causing continuous firing and spasm.</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Zinc-dependent metalloproteases cleave SNAREs, preventing neurons from releasing acetylcholine, causing flaccid paralysis.</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Phospholipase C cleaves phospholipids, causing extensive membrane damage leading to systemic spread of the toxin.</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Enzymes digest connective tisues, leading to structural damage and systemic spread of the toxin.</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Glucosyltransferases inhibit the Rho family of GTPases, causing fluid secretion, cell death, and inflammation leading to pseudomembrane formation.</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+    Answer: <p style="color:white"> The zinc-dependent metalloprotease tetanospasmin is carried to the CNS by retrograde axonal transport, where it cleaves synaptobrevin II, inhibiting the docking of inhibitory NT vesicles at synapses, resulting in continuous firing and muscle spasm.</p>
+<br>
+    Sixteen hours after attending a school reunion at a local park, a 38-year-old male experiences abdominal cramps and watery diarrhea. One day later the symptoms have spontaneously resolved and he was able to go back to work. Food poisoning is suspected.
+    How many possible toxins are made by this bacteria? <br>
+    <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. One</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Three</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Five</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Seven</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Nine </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+    Answer: <p style="color:white"> <i>Clostridium perfringens</i> has five serotypes based on the types of extracellular toxins (A-E) made and their tropisms. <i> Clostridium botulinum creates toxins A-G for which a trivalent vaccine covering A, B, and E or a heptavalent vaccine are available. <i>Clostridium tetani</i> has only one major virulence factor, tetanospasmin.</p><br>
+    <br>
+A 28-year-old man has been taking clindamycin while hospitalized for nearly 2 weeks. He recently started to experience abdominal cramping and watery diarrhea. The attending physician decided to discontinue the antibiotics to see if the diarrhea would resolve. A stool sample was sent to the laboratory for ELISA testing for toxins A and B. What complications might you expect?<br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Production of a phospholipase C leading to cell membrane and widespread tissue damage with systemic spread of the toxin, and production of enzymes degrading connective tissue and hemoglobin.</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Spastic paralysis, with signs such as risus sardonicus, trismus, opisthotonus, and respiratory muscle spasms.</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Pseudomembrane formation leading to pseudomembranous colitis, toxic megacolon, perforation of the colon, and sepsis. </label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Flaccid paralysis, managed with mechanical ventilation</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Watery diarrhea will progress to rice water stools, causing dehydration and electrolyte imbalance</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+    Answer: <p style="color:white"> This patient most likely has <i>Clostridium difficile</i> after a course of antibiotics, which could be expected to progress to pseudomembrane formation, colitis, toxic megacolon, perforation, and sepsis.</p>
+<br>A mother brings her 6-year-old daughter to her pediatrician with symptoms of a sore throat and red, tearing eyes. The patient complains of itchy eyes when she woke up that morning. Her symptoms started the previous day, and she missed school today. History reveals that the child’s vaccinations are up to date and that she has been previously healthy with no prior hospitalizations. Upon examination, the patient is found to have a temperature of 39°C, blood pressure of 90/70 mmHg, and respiratory rate of 20 breaths/min. She has upper lid edema with slight subconjunctival hemorrhage. Her mother mentions that other classmates were also out sick during the past week with similar symptoms.<br>
   What is the most likely condition experienced by this child?<br>
   <form>
   <input type="radio" id="A" name="1" value="A">
