--- a/physiology.html
+++ b/physiology.html
@@ -4,5 +4,62 @@
 </head>
 <body>
 <h1><center>Physiology</center></h1>
+  Which of the following characteristics is shared by simple and facilitated diffusion of glucose?
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Occurs down an electrochemical gradient</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Is saturable</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Requires metabolic energy</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Is inhibited by the presence of galactose</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Requires a Na+ gradient</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> A. Both types of transport occur down an electrochemical gradient and do not require metabolic energy. Saturability and inhibition by other sugars are characteristic only of carrier-mediated glucose transport; thus, facilitated diffusion is saturable and inhibited by galactose, whereas simple diffusion is not.</p><br>
+  During the upstroke of the nerve action potential
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. There is net outward current and the cell interior becomes more negative</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. There is net outward current and the cell interior becomes less negative </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. There is net inward current and the cell interior becomes more negative</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. There is net inward current and the cell interior becomes less negative</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> D. During the upstroke of the action potential, the cell depolarizes or becomes less negative. The depolarization is caused by inward current, which is, by definition, the movement of positive charge into the cell. In nerve and in most types of muscle, the inward current is carried by Na+. </p><br>
+Solutions A and B are separated by a semipermeable membrane that is permeable to K+ but not to Cl-. Solution A is 100mM KCl, and solution B is 1mM KCl. Which of the following statements about solution A and B are true?  
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. K+ ions will diffuse from solution A to solution B until the [K+] of both solutions is 50.5 mM.</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. K+ ions will diffuse from solution B to solution A until the [K+] of both solutions is 50.5 mM.</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. KCl will diffuse from solution A to solution B until the [KCl] of both solutions is 50.5 mM</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. K+ will diffuse from solution A to solution B until a membrane potential develops with solution A negative with respect to solution B.</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. K+ will diffuse from solution A to solution B until a membrane potential develops with solution A positive with respect to solution B. </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> D. Because the membrane is permeable only to K+ ions, K+ will diffuse down its concentration gradient from solution A to solution B, leaving some Cl- ions behind in solution A. A diffusion potential will be created, with solution A negative with respect to solution B. Generation of a diffusion potential involves moement of only a few ions and, therefore, does not cause a change in the concentration of the bulk solutions. </p><br>
+  The correct temporal sequence for events at the neuromuscular junction is
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Action potential in the motor nerve; depolarization of the muscle end plate; uptake of Ca++ into the presynaptic nerve terminal </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Uptake of Ca++ into the presynaptic terminal; release of acetylcholine; depolarization of the muscle end plate</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Release of Ach; action potential in the motor nerve; action potential in the muscle</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Uptake of Ca++ into the motor end plate; action potential in the motor end plate; action potential in the muscle</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Release of Ach; action potential in the muscle end plate; action potential in the muscle</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> B. Acetylcholine is stored in vesicles and released when an AP in the motor nerve opens Ca++ channels in the presynaptic terminal. ACh diffuses across the synaptic cleft and opens Na+ and K+ channels in the muscle end plate, depolarizing it (but not producing an action potential). Depolarization of the muscle end plate causes local currents in adjacent muscle membrane, depolarizing the membrane to threshold and producing action potentials.</p>
+  
 </body>
 </html>
